--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "build": "vite build",
+    "dev": "vite",
+    "start": "vite preview",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.7.1",
-    "@react-router/serve": "^7.7.1",
-    "isbot": "^5.1.27",
     "lucide-react": "^0.540.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-player": "^3.3.1",
-    "react-router": "^7.7.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
